fix: improper overflow due to css margin

--- a/themes/launchpad.css
+++ b/themes/launchpad.css
@@ -38,7 +38,6 @@ input::placeholder {
 }
 
 .results {
-  margin: 5vh;
   height: 90vh;
   display: flex;
   flex-wrap: wrap;
